[package]
name = "quproxy"
version = "0.1.0"
edition = "2021"
authors = ["sorz <me@sorz.org>"]
description = "Transparent QUIC to SOCKSv5 proxy on Linux"
license = "MIT"
keywords = ["proxy", "socksv5", "quic"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures  = "0.3"

serde = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["derive"] }
toml = "0.5"

parse_duration = "2"
bytesize = "1"

libc = "0.2"
nix = "0.24"
net2 = "0.2"
socket2 = "0.4"

parking_lot = "0.12"
derivative="2"
anyhow = "1"

byteorder = "1"
bytes = "1"
hex-literal = "0.3"
lru_time_cache = "0.11"

rand = "0.8"
ring = "0.16"
